--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "postcss-cli": "^8.3.1"
   },
   "dependencies": {
+    "globstar": "^1.0.0",
     "html-validate": "^7.17.0",
     "npm-run-all": "^4.1.5",
+    "nu-html-checker": "^0.1.0",
     "postcss": "^8.4.23",
     "sass": "^1.62.1"
   }
